--- a/css/modern-business.css
+++ b/css/modern-business.css
@@ -23,6 +23,17 @@ body {
     opacity: 0.8;
 }
 
+div.center-container {
+    height: 10em;
+    position: relative }
+div.center-container a {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%) }
+
 /* Home Page Carousel */
 
 header.carousel {
