--- a/css/talent spotting.css
+++ b/css/talent spotting.css
@@ -54,23 +54,21 @@ padding-bottom:30px;
 margin:5px;
 }
 
-.similarContainer img{
-padding-left:5px;
-padding-right:0px !important ;
-}
 
-.similarContainer h4{
+/* .similarContainer h4{
 padding-left:5px;
 }
-
+ */
 .similarItems {
-padding:5 !important;
+padding-left:15px !important;
+padding-right:0px !important;
 margin:0 !important;
-}
+} */
 
+/* 
 .similarItems h5{
 padding-top:0px;
-}
-.similarItems p{
+} */
+/* .similarItems p{
 font-size:3px;
-}
+} */
